# fl-studio-mcp

./: .gitignore  CLAUDE.md  ComposeWithLLM.pyscript  DEVELOPER.md  LICENSE  README.md  ThreeTracks.flp  fl_studio_mcp_server.py  gh-mcp.ps1  install_fastmcp.txt  install_mcp_for_claude.bat  install_mcp_for_claude.sh  install_mcp_for_codex.bat  install_mcp_for_codex.sh  install_mcp_for_gemini.bat  install_mcp_for_gemini.sh  install_mcp_for_gh.bat  install_mcp_for_gh.sh  install_pip_log.txt  install_pip_no_deps.txt  install_prerequisites.bat  install_prerequisites.sh  mcp_server_run.txt  nuln  nulnIF  project_notes.txt  pyproject.toml  read_flp_notes.py  reinstall_pywin32.txt  reinstall_pywin32_after_remove.txt  setup_midi_controllers.sh  test.flp
.vibe/: config.toml  vibehistory
Backup/: test (autosaved at 19h53).flp  test (overwritten at 19h32).flp
drumsAndChords.flp/: drumsAndChords.flp.flp
flp/: __init__.py  read_flp_notes.py
mcp/: fl_studio_mcp_server.py  fl_studio_mcp_server.py.good  install_mcp_for_claude.sh  install_mcp_for_codex.sh  install_mcp_for_gemini.sh
midi_controller/: ARCHITECTURE.md  CLAUDE.md  INSTALL_DUAL_CONTROLLER.md  __init__.py  device_FLRequest.py  device_FLResponse.py  events_plan.md  fl_dual_port.py  fl_event_listener.py  fl_studio_state_manager.py  focus_management.py  test_dual_port.py  test_get_pattern_names.py  test_heavy_load.py  test_select_pattern.py
piano_roll/: 2test.pyscript  9ComposeWithLLM.pyscript  BeginLLMInteraction.pyscript  EndLLMInteraction.pyscript  __init__.py  cmd_opt_y_trigger.py  debug_piano_script_files.sh  f3_trigger.py  (+8 more)
signal-mcp/: README.md  pyproject.toml  signal_mcp_server.py
(+18 files in other folders)
