[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fl-studio-mcp"
version = "0.1.0"
description = "FastMCP server for FL Studio - LLM integration with piano roll and more"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "pynput>=1.7.6",
    "mido>=1.3.0",
    "python-rtmidi>=1.5.0",
    "PyQt5>=5.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = ["midi_controller", "piano_roll", "flp"]

[tool.uv]
# Python version managed by uv venv
