[project]
name = "signal-mcp"
version = "1.0.0"
description = "MCP server for Signal music sequencer integration"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
signal-mcp = "signal_mcp_server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
